@@ -52,8 +52,7 @@
   ctype<char>::
   scan_is(mask __m, const char* __low, const char* __high) const
   {
-    while (__low < __high 
-	   && !((_M_table)[static_cast<unsigned char>(*__low)] & __m))
+    while (__low < __high && ! this->is(__m, *__low))
       ++__low;
     return __low;
   }
@@ -62,8 +61,7 @@
   ctype<char>::
   scan_not(mask __m, const char* __low, const char* __high) const
   {
-    while (__low < __high 
-	   && ((_M_table + 1)[static_cast<unsigned char>(*__low)] & __m) != 0)
+    while (__low < __high && this->is(__m, *__low))
       ++__low;
     return __low;
   }
